# rl_dp_5_ddp

./: LICENSE  README.md
rldp5_ws/src/rldp5_scripts/: CMakeLists.txt  package.xml
rldp5_ws/src/rldp5_scripts/src/: camera_tragen.py  crg_pcl.py  crg_pcl_new (copy).py  crg_pcl_new.py  crg_pcl_v0.py  crg_pcl_v1.py  crg_pcl_v2.1.py  file.pcd  frame.py  image22.py  ply_to_pcl.py  save_images.py  segment_pcl.py  smoothen.py  test.py  waypoints.py
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_beer_ws/: database.db
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_beer_ws/dense/0/: fused.ply  fused.ply.vis  meshed-poisson.ply
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_beer_ws/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_human_ws/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_test_frames_4_ws/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_test_ws_2/: database.db
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_test_ws_2/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_ws/: database.db
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/colmap_ws/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/person_colmap_test_ws/: database.db
rldp5_ws/src/rldp5_scripts/src/COLMAP_Test/person_colmap_test_ws/sparse/: project.ini
rldp5_ws/src/rldp5_scripts/src/colmap_ss_ws/: database.db
rldp5_ws/src/rldp5_scripts/src/colmap_ss_ws/dense/0/: fused.ply  fused.ply.vis  meshed-poisson.ply
rldp5_ws/src/rldp5_scripts/src/colmap_ss_ws/sparse/: project.ini
(+71 files in other folders)
